--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,17 @@
-plugins {
-    id 'java'
-}
 
-group 'com.vinaylogics'
-version '1.0-SNAPSHOT'
-
-subprojects {
-    apply plugin: 'java'
+allprojects {
+    group 'com.vinaylogics'
+    version '1.0-SNAPSHOT'
     repositories {
         mavenCentral()
     }
+}
+subprojects {
+    apply plugin: 'java'
+
 
     dependencies {
-        testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
-        testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
+        testImplementation 'org.junit.jupiter:junit-jupiter:5.7.2'
     }
 
     test {
