--- a/settings.gradle
+++ b/settings.gradle
@@ -18,4 +18,6 @@ include 'jdk11'
 include 'OOPs'
 include 'nio'
 include 'DesignPattern'
+include 'DesignPattern:Creational'
+findProject(':DesignPattern:Creational')?.name = 'Creational'
 
