Before SRP Implementation

--- a/settings.gradle
+++ b/settings.gradle
@@ -20,4 +20,9 @@ include 'nio'
 include 'DesignPattern'
 include 'DesignPattern:Creational'
 findProject(':DesignPattern:Creational')?.name = 'Creational'
+include 'DataStructure'
+include 'Problems'
+include 'SOLID'
+include 'SOLID:basics'
+findProject(':SOLID:basics')?.name = 'basics'
 
