Junit 5 Test Tutorial

--- a/settings.gradle
+++ b/settings.gradle
@@ -25,4 +25,11 @@ include 'Problems'
 include 'SOLID'
 include 'SOLID:basics'
 findProject(':SOLID:basics')?.name = 'basics'
+include 'DataStructure:SearchTechniques'
+findProject(':DataStructure:SearchTechniques')?.name = 'SearchTechniques'
+include 'CleanCode'
+include 'GlideRose'
+include 'CleanCode:GlideRose'
+findProject(':CleanCode:GlideRose')?.name = 'GlideRose'
+include 'Junit5'
 
